--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>React App</title>
+    <title>GigWork</title>
 
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </head>
